@@ -93,7 +93,8 @@ int vips_image_open_input( VipsImage *image );
 int vips_image_open_output( VipsImage *image );
 
 void vips__link_break_all( VipsImage *im );
-void *vips__link_map( VipsImage *im, VipsSListMap2Fn fn, void *a, void *b );
+void *vips__link_map( VipsImage *image, gboolean upstream, 
+	VipsSListMap2Fn fn, void *a, void *b );
 
 char *vips__b64_encode( const unsigned char *data, size_t data_length );
 unsigned char *vips__b64_decode( const char *buffer, size_t *data_length );
