@@ -7,6 +7,7 @@
 - remove im_rightshift_size(), just a convenience function now
 - vipsthumbnail no longer removes profiles by default
 - much more gentle sharpening in thumbnails
+- added "minimise" signal, used by tilecache to drop
 
 18/6/12 started 7.28.9
 - slightly more memory debugging output
